fix vertical align of show more button

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -229,7 +229,7 @@ a {
 #showMoreBtn {
   position: absolute;
   right: 1em;
-  margin-top: -2em;
+  top: 0.67857143em;
 }
 
 .ui.buttons .disabled.button, .ui.disabled.button, .ui.button:disabled, .ui.disabled.button:hover, .ui.disabled.active.button {
